# PRDBench

./: .gitignore  README.md  batch_test.py  claude_code_prompt.md  claude_code_prompt_simple.md  run_eval.py  test_guide.md  test_single.py  test_with_judge.py
EvalAgent/code_eval_agent/: mcp_tools.py
PRDBench/: aux_data.json
PRDBench/1/: prompt.md
PRDBench/10/: prompt.md
PRDBench/11/: prompt.md
PRDBench/12/: prompt.md
PRDBench/13/: prompt.md
PRDBench/14/: prompt.md
PRDBench/15/: prompt.md
PRDBench/16/: prompt.md
PRDBench/17/: prompt.md
PRDBench/47/: CONTRIBUTING.md  Makefile  conftest.py  prompt.md  pyproject.toml
PRDBench/47/.github/: CODEOWNERS
PRDBench/47/.github/workflows/: pytest.yml
PRDBench/47/evaluation/: add_low_stock_books.py  add_python_books.py  create_test001_user.in  detailed_test_plan.json  evaluation_report.md  expected_backup.sql  expected_books.json  expected_users.csv  explore_admin_menu.in  fix_all_test_imports.py  fix_chart_chinese_font.py  fix_mysql_syntax.py  fix_test_mysql_syntax.py  metric.json  run_evaluation.py  setup_test_db.py  temp_register_input.in  test_2_1_input.in  test_2_1_input_correct.in  test_2_1_input_fixed.in  test_2_1_input_working.in  test_2_1_new_input.in  test_2_1_simple_input.in  test_2_2a_input.in  test_2_2b_input.in  test_3_1_input.in  test_3_2a_input.in  test_3_2b_input.in  test_3_2c_input.in  test_3_2d_input.in  test_3_2e_input.in  test_3_3a_input.in  test_3_3a_input_clean.in  test_3_3b_delete_with_setup.py  test_3_3b_input.in  test_3_3b_simple.py  test_3_3b_temp_input.in  test_4_1_input.in  test_4_1_smart_borrow.py  test_4_3_input.in  (+19 more)
PRDBench/47/evaluation/data/: library.db
PRDBench/47/evaluation/tests/: test_1_1_数据库连接与初始化.py  test_2_1_用户注册功能.py  test_3_1_图书添加功能.py  test_admin_permission.py  test_book_uniqueness.py  test_borrow_auth.py  test_borrow_limit_check.py  test_chart_generation.py  test_database_exception.py  test_database_init.py  test_date_validation.py  test_duplicate_borrow_check.py  test_input_exception.py  test_logging.py  test_password_encryption.py  test_password_validation.py  test_stock_check.py  test_student_id_validation.py
PRDBench/47/src/: PRD.md  README.md  __init__.py  constants.py  main.py  run.py
PRDBench/47/src/config/: database_mode.py  settings.py
PRDBench/47/src/data/: beijing_subway.json  sample_data.json
PRDBench/47/src/graph/: station_graph_impl.py
PRDBench/47/src/menus/: __init__.py
PRDBench/47/src/models/: __init__.py  fare_result.py
PRDBench/47/src/protocols/: __init__.py  station_graph.py
PRDBench/47/src/services/: auth_service.py  book_service.py  borrow_service.py  fare_service.py  user_service.py
PRDBench/47/src/tools/: setup_offline_mode.py
PRDBench/47/src/utils/: chart_generator.py  database.py  encrypt.py  logger.py  validators.py
PRDBench/47/tests/: test_fare_rules_mapping.py  test_fare_service_boundaries.py  test_subway_impl.py
(+1669 files in other folders)
