[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beijing-subway-fare"
version = "0.1.0"
description = "Beijing Subway Fare Calculation System (Project 47)"
requires-python = ">=3.10"
dependencies = [
    "pydantic==2.7.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.2.0",
    "pytest-cov==5.0.0",
    "mypy==1.10.0",
    "ruff==0.4.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=95"

[tool.coverage.run]
source = ["src"]
omit = ["src/**/__init__.py", "src/protocols/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "\\.\\.\\.",          # Protocol stub bodies
    "def __repr__",
    "raise NotImplementedError",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["src"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
